<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="apkupdate_download">downloading, please wait a moment</string>
    <string name="apkupdate_download_fail">download fail</string>
    <string name="apkupdate_download_success">download completed, installing</string>
    <string name="apkupdate_new_version">new version v</string>
    <string name="app_name">video virtual camera</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_active">active</string>
    <string name="camerar2_basic_picture">picture</string>
    <string name="cdkey_invalid">the cdkey expired or not activated</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_selinux">run setenforce fail, this phone may not support!</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copyright">V%s\n all copyright reserved</string>
    <string name="define_zxingandroidembedded" />
    <string name="deviceid">device id:</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_invalid_mp4_format">invalid mp4 file, please convert format to h264.</string>
    <string name="error_no_legal_rtmp_url">invalid rtmp url</string>
    <string name="error_no_mp4_find">%s file no exist,please check</string>
    <string name="error_no_replace_camera">camera connect fail, please restart app</string>
    <string name="error_no_start_player">start player fail, please restart app and try again</string>
    <string name="error_should_retry">please retry</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="float_btn_tip_close">do you want close floating window ?</string>
    <string name="float_btn_tip_hflip">The first click of this button will flip the video horizontally and the second click will restore it. Do you want to continue?</string>
    <string name="float_btn_tip_play">do you want to play now? only if the screen is stuck need to do this.</string>
    <string name="float_btn_tip_rotate">The first time this button is clicked, it will rotate 90° counterclockwise, the second time it will rotate 90° clockwise, and the third time it will be restored. Do you want to continue?</string>
    <string name="float_btn_tip_six_key">do you want to play /sdcard/Movies/%s?</string>
    <string name="float_btn_tip_stop">do you want to force stop play now? This will make the screen stuck if you are playing now.</string>
    <string name="float_btn_tip_swapjpg">This function is only used when the screen rotates when taking pictures.</string>
    <string name="float_btn_tip_switch_camera">switch between replacement camera and original camera</string>
    <string name="float_btn_tip_title">Attention</string>
    <string name="float_btn_tip_vflip">The first click of this button will flip the video vertically and the second click will restore it. Do you want to continue?</string>
    <string name="float_edit_tips">input rtmp url</string>
    <string name="float_edit_title">rtmp stream</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon">icon</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="init_android_version_mismatch">only support Android %d!</string>
    <string name="init_camera_version_mismatch">the camera mismatch</string>
    <string name="input_cdkey">please input cdkey</string>
    <string name="library_zxingandroidembedded_author">JourneyApps</string>
    <string name="library_zxingandroidembedded_authorWebsite">https://journeyapps.com/</string>
    <string name="library_zxingandroidembedded_isOpenSource">true</string>
    <string name="library_zxingandroidembedded_libraryDescription">Barcode scanning library for Android, using ZXing for decoding.</string>
    <string name="library_zxingandroidembedded_libraryName">ZXing Android Embedded</string>
    <string name="library_zxingandroidembedded_libraryVersion" />
    <string name="library_zxingandroidembedded_libraryWebsite">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="library_zxingandroidembedded_licenseId">apache_2_0</string>
    <string name="library_zxingandroidembedded_repositoryLink">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="messages_header">Messages</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="mtrl_slider_range_content_description">%1$s to %2$s</string>
    <string name="net_error_retry">retry</string>
    <string name="net_error_title">connect to server error</string>
    <string name="net_test_loading">connecting to server</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="preview_camera">preview</string>
    <string name="replace_camera">replace</string>
    <string name="reset_camera">reset</string>
    <string name="screen_flip">flip</string>
    <string name="screen_height_padding">height padding</string>
    <string name="screen_rotate">rotate</string>
    <string name="setting_player_stop">player is not running</string>
    <string name="setting_replace_fail">camera not replace</string>
    <string name="setting_textview_step_1">1.replace camera</string>
    <string name="setting_textview_step_2">2.play video</string>
    <string name="setting_textview_step_3">3.preview</string>
    <string name="setting_textview_usage_head">Steps usage </string>
    <string name="start_player">▶️\nplay</string>
    <string name="stop_player">⏹️\nstop</string>
    <string name="stop_preview_camera">stop</string>
    <string name="switch_float">floating window:</string>
    <string name="switch_su">enable root:</string>
    <string name="video_come_from"> To use the rtmp function, please open the floating window and click ��️\n The video files listed below are from the sd card DCIM and Movies directory </string>
    <string name="video_size">video resize</string>
</resources>