<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/camera_preview"
                android:background="@color/black"
                android:layout_width="480px"
                android:layout_height="640px"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/qrcode"
                    android:layout_width="96dp"
                    android:layout_height="96dp"/>
                <TextView
                    android:id="@+id/deviceid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deviceid"/>
                <TextView
                    android:id="@+id/cdkey_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <EditText
                    android:id="@+id/cdkey_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_cdkey"/>
                <Button
                    android:id="@+id/button_activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_active"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:background="#dddddd"
            android:paddingTop="1dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="2px"/>
        <TextView
            android:textSize="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_textview_usage_head"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_textview_step_1"/>
            <TextView
                android:textColor="@color/red"
                android:id="@+id/textView_camera_replace_status"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_replace_fail"
                android:paddingStart="20dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_settings"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/replace_camera"
                    android:paddingStart="20dp"/>
                <Button
                    android:id="@+id/button_close"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_camera"
                    android:paddingStart="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:background="#dddddd"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_textview_step_2"/>
            <TextView
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_come_from"/>
            <Spinner
                android:id="@+id/spinner"
                android:paddingLeft="0dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_flip"
                    android:paddingStart="0dp"/>
                <Spinner
                    android:entries="@array/flip"
                    android:id="@+id/flip"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:paddingStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_rotate"
                    android:paddingStart="0dp"/>
                <Spinner
                    android:entries="@array/transpose"
                    android:id="@+id/rotate"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:paddingStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_height_padding"
                    android:paddingStart="0dp"/>
                <Spinner
                    android:entries="@array/height_padding"
                    android:id="@+id/height_padding"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:paddingStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_size"
                    android:paddingStart="20dp"/>
                <Spinner
                    android:id="@+id/viewsize"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:textColor="@color/red"
            android:id="@+id/textView_player_status"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_player_stop"
            android:paddingStart="20dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_start_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_player"/>
            <Button
                android:id="@+id/button_stop_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_player"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_float"
                android:paddingStart="20dp"/>
            <Switch
                android:id="@+id/switch_float"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="on"
                android:textOff="off"/>
            <TextView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_su"
                android:paddingStart="20dp"/>
            <Switch
                android:id="@+id/switch_su"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="on"
                android:textOff="off"/>
        </LinearLayout>
        <View
            android:background="#dddddd"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_textview_step_3"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_start_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_camera"/>
            <Button
                android:id="@+id/button_stop_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_preview_camera"/>
        </LinearLayout>
        <View
            android:background="#dddddd"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:textSize="9dp"
            android:layout_gravity="bottom"
            android:id="@+id/copyright"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </LinearLayout>
</ScrollView>
